--- a/src/com/fan/interview/1. OS常见面试题.md
+++ b/src/com/fan/interview/1. OS常见面试题.md
@@ -29,6 +29,7 @@
 ## 5. 进程的状态有哪几种？
 
 ## 6. 进程间的通信方式？
+[记一次面试：进程之间究竟有哪些通信方式？ ---- 告别死记硬背](https://mp.weixin.qq.com/s/5CbYGrylSKx1JwtOiW3aOQ)
 
 ## 7. 线程的同步方式？
 
