--- a/src/com/fan/interview/1. OS常见面试题.md
+++ b/src/com/fan/interview/1. OS常见面试题.md
@@ -36,15 +36,45 @@
 ## 8. 进程的调度算法？
 
 ## 9. 什么是死锁？
+死锁是指多个进程在运行过程中因争夺资源而造成的一种僵局。当进程处于这种僵局状态时，若无外力作用，他们都将无法再向前推进。如下图所示：如果此时有一个线程 A，已经持有了锁 A，但是试图获取锁 B，线程 B 持有锁 B，而试图获取锁 A，这种情况下就会产生死锁。
+
+![img](https://mmbiz.qpic.cn/mmbiz_png/I47RwB1Z6MwBgUOwfFHscBdJsMMn19D6u9bvgpxHZoy78CgEbsmSEOabj3ykrxplc155fvsGicwBzDic6iawIbdBw/640?wx_fmt=png&tp=webp&wxfrom=5&wx_lazy=1&wx_co=1)
 
 ## 10. 产生死锁的原因？
-
+由于进程中存在一些不可剥夺资源，而当两个或以上的进程占有自身资源，并请求对方资源时，会导致每一个进程都无法向前推进，这就是死锁产生的原因。  
+具体来说，两方面：  
+    1. 竞争资源导致死锁：例如：系统中只有一台打印机，可供进程 A 使用，假定 A 已占用了打印机，若 B 继续要求打印机打印将被阻塞。    
+    2. 进程顺序推进不当：例如：进程 A 和 进程 B 互相等待对方的数据。
+    ============================
+    系统中的资源可以分为两类：
+    1. 可剥夺资源：是指某进程在获得这类资源后，该资源可以再被其他进程或系统剥夺，CPU 和主存均属于可剥夺性资源；
+    2. 不可剥夺资源，当系统把这类资源分配给某进程后，再不能强行收回，只能在进程用完后自行释放，如磁带机、打印机等。
 ## 11. 死锁产生的必要条件？
+四个条件，缺一不可。  
+1. 互斥：一个资源在一段时间内仅为某一个资源所占有  
+2. 请求和保持：当进程因请求资源而阻塞时，对已获得的资源保持不放    
+3. 不可剥夺：进程已获得的资源在未使用完之前，不能剥夺，只能在使用完时由自己释放。    
+4. 循环等待：在发生死锁时，必然存在一个进程--资源的环形链路。  
 
-## 12. 怎么预防死锁？怎么避免死锁？怎么解除死锁？
-
+## 12. 怎么预防死锁？怎么避免死锁？怎么解除死锁？  
+**预防** ：  
+    1. 破坏请求条件：  
+    2. 破坏请求保持条件：
+    3. 破坏不可剥夺条件：  
+    4. 破坏循环等待条件：  
+**避免** ： 
+    1. 银行家算法：  
+    2. 安全序列：  
+    3. 系统安全状态
+**解除** ： 
+    1. 资源剥夺：  
+    2. 撤销进程：  
+    3. 进程回退：  
 ## 13. 什么是缓冲区溢出？有什么危害？
-
+缓冲区就类似平常说的缓存，有固定大小。当数据放在在缓冲区中的大小超过容量本身时，就会发生缓冲区溢出。溢出的部分会覆盖正常的部分数据。  
+主要危害有两个：   
+    1. 导致程序崩溃  
+    2. 导致程序跳转而执行一段恶意程序
 ## 14. 操作系统的内存管理主要是做什么？
 
 ## 15. 内存管理机制主要有有哪几种方式？
